--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,8 +1,10 @@
 $color-primary: #282828;
 $color-primary-y: #ddda2d;
 $color-primary-btn: #f1ee1e;
+$color-primary-bg: #eeeeee;
 $color-white: #ffffff;
 $color-t-b: #000000;
+$color-t-w: #bac0c2;
 $color-btn-hover: #eaee1e;
 $color-title-product: #1d75c4;
 $color-price-product: #f35353;
