--- a/scss/layout/_section-introduce.scss
+++ b/scss/layout/_section-introduce.scss
@@ -1,5 +1,6 @@
 .section-introduce {
    margin-top: 4rem;
+   background-color: $color-primary-bg;
    &__banner {
       text-align: center;
       & img {
