--- a/style/main.scss
+++ b/style/main.scss
@@ -3,6 +3,8 @@
 @import "../font/fonts";
 @import "../scss/base/base";
 @import "../scss/base/ultilities";
+@import "../scss/base/animation";
+
 // Component
 @import "../scss/components/button";
 @import "../scss/components/product";
