--- a/scss/base/_ultilities.scss
+++ b/scss/base/_ultilities.scss
@@ -2,3 +2,17 @@
    color: $color-primary-y !important;
    transform: none !important;
 }
+.u-footer-list {
+   & > li {
+      list-style: none;
+      & > a {
+         display: inline-block;
+         text-decoration: none;
+         color: $color-t-w;
+         &:hover {
+            color: $color-primary-btn;
+            transform: scale(1.2);
+         }
+      }
+   }
+}
