--- a/scss/components/_product.scss
+++ b/scss/components/_product.scss
@@ -4,6 +4,7 @@
    box-shadow: 0 0.1rem 1rem rgba(black, 0.2);
    border-radius: 1rem;
    overflow: hidden;
+   cursor: pointer;
    transition: all 0.4s;
    &:hover {
       transform: translateY(-0.5rem);
@@ -21,6 +22,10 @@
       color: $color-title-product;
       font-weight: 600;
       line-height: 1.6rem;
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
    }
    &__price {
       margin-left: 0.8rem;
