--- a/scss/layout/_section-policy.scss
+++ b/scss/layout/_section-policy.scss
@@ -1,7 +1,8 @@
 .section-policy {
-   margin-top: 3rem;
+   margin: 4rem 0 2rem;
    padding: 4rem 14rem;
    color: $color-t-b;
+   background-color: $color-primary-bg;
    &__title {
       text-align: center;
       font-size: 2.2rem;
