--- a/scss/layout/_section-shop.scss
+++ b/scss/layout/_section-shop.scss
@@ -1,7 +1,7 @@
 .section-shop {
    position: relative;
-   margin-top: 3rem;
-   background-color: #eeeeee;
+   margin: 4rem 0 2rem;
+   background-color: $color-primary-bg;
    &__left {
       margin-left: 4%;
       padding: 2rem 2rem;
@@ -38,21 +38,26 @@
    }
    &__modal {
       display: none;
-      position: absolute;
+      position: fixed;
       top: 0;
+      left: 0;
       right: 0;
-      width: 100%;
-      height: 100%;
+      bottom: 0;
       background-color: rgba(black, 0.4);
       z-index: 2;
+      transition: all 0.5s;
       &--box {
          position: absolute;
          top: 50%;
          left: 50%;
          transform: translate(-50%, -50%);
-         width: 50%;
-         height: 50%;
+         width: 60%;
+         height: 60%;
+         display: flex;
+         border-radius: 2rem;
+         overflow: hidden;
          background-color: #fff;
+         animation: GrowUp ease 1s;
       }
    }
 }
